# afml-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
afml/: __init__.py
afml/core/: backtester.py  streaming.py
afml/data/: bars.py  handler.py  hf_simulation.py  labeling.py  processing.py  sampling.py  simulation.py  weights.py
afml/features/: entropy.py  fractional_differentiation.py
afml/machine_learning/: ensembling.py  feature_importance.py  feature_importance_analysis.py
afml/microstructure/: analysis.py  processor.py
afml/portfolio/: analysis.py  bet_sizing.py  optimizer.py  strategies.py
afml/utils/: __init__.py  multiprocessing.py  performance.py  visualization.py
afml/validation/: cross_validation.py  dangers.py  efficiency.py  robustness.py  statistics.py  structural_breaks.py
scripts/: chap10_bet_sizing.py  chap11_dangers_of_backtesting.py  chap12_efficient_backtesting.py  chap14_backtest_statistics.py  chap15_strategy_risk.py  chap16_machine_learning_asset_allocation.py  chap17_structural_breaks.py  chap18_entropy_features.py  chap19_microstructural_features.py  chap20_multiprocessing.py  chap2_bars.py  chap3_labeling.py  chap4_sample_weights.py  chap5_fractional_differentiation.py  chap6_and_8_ensembling_and_feature_importance.py  chap7_and_9_cross_validation_and_tuning.py  chap8_feature_importance_analysis.py  refactored_library_usage.py
